# p3orm

./: .gitignore  404.html  LICENSE  README.md  example.py  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: publish.yml  test.yml
docs/: 404.html  CNAME  index.html  sitemap.xml
docs/contributing/: index.html
docs/getting_started/: index.html
docs/search/: search_index.json
docs/tutorial/: connection_pool.md  multiple_databases.md
docs/tutorial/complex_queries/: index.html
docs/tutorial/connecting/: index.html
docs/tutorial/defining_models/: index.html
docs/tutorial/multiple_databases/: index.html
docs/tutorial/relationships/: index.html
getting_started/: index.html
mkdocs/: contributing.md  getting_started.md  index.md
mkdocs/tutorial/: complex_queries.md  connecting.md  defining_models.md  multiple_databases.md  relationships.md
p3orm/: __init__.py  core.py  exceptions.py  fields.py  table.py  types.py  utils.py
p3orm/drivers/: __init__.py  base.py  postgres.py  sqlite.py
porm/: core.py  porm.py  table.py  types.py
scripts/: assert_package_versions_match.py
search/: search_index.json
site/: index.html
site/tutorial/connection_pool/: index.html
test/: __init__.py  test_core.py  test_delete.py  test_fetch.py  test_fetch_related.py  test_insert.py  test_parameterized_queries.py  test_select.py  test_table.py  test_update.py
test/fixtures/: fixtures.py  helpers.py  queries.py  tables.py
test/postgres/: test_core.py  test_delete.py  test_fetch.py  test_fetch_related.py  test_insert.py  test_parameterized_queries.py  test_table.py  test_update.py
test/postgres/fixtures/: helpers.py
test/sqlite/: test_core.py  test_delete.py  test_fetch.py  test_fetch_related.py  test_insert.py  test_parameterized_queries.py  test_table.py  test_update.py
test/sqlite/fixtures/: fixtures.py
tutorial/complex_queries/: index.html
tutorial/relationships/: index.html
